fix: fixed alignment of plus sign, changed sponsor logo background, fixed issue with not grayed out arrows in archive carousel

--- a/app/(pages)/(index-page)/_components/Marquee/Logo.module.scss
+++ b/app/(pages)/(index-page)/_components/Marquee/Logo.module.scss
@@ -1,7 +1,7 @@
 
 
 .container {
-  background-color: #015271;
+  background-color: #005271;
   border-radius: 10px;
   transition: transform 0.2s ease-in-out;
 
@@ -18,7 +18,7 @@
     height: 140px;
     padding: 20px 40px;
 
-    //doesn't work?? @mixin lg {
+    // @mixin lg {
     //   width: 350px;
     //   height: 200px;
     //   padding: 30px 60px;
